First bugfix (added br with clear:both, to avoid overflow:auto and breaks)

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ body {
     /*display:inline;*/
     width:671px;
     margin:0 auto;
-    overflow:auto;
 }
 .optionsTitle{
     margin:0 auto;
